--- a/FrontEnd/src/app/routes/klient/klienti/klienti.component.html
+++ b/FrontEnd/src/app/routes/klient/klienti/klienti.component.html
@@ -294,7 +294,7 @@
                                 <td>{{mjeti?.model}}</td>
                                 <td>{{mjeti?.viti}}</td>
                                 <td>{{mjeti?.nrShasise}}</td>
-                                <td>{{mjeti?.kilometrazhi}}</td>
+                                <td>{{mjeti?.odometer}}</td>
                             </tr>
                         </table>
                     </div>
@@ -406,7 +406,7 @@
                             </div>
                             <div class="form-group">
                                 <input class="form-control" type="text" placeholder="Klomentrazhi. Psh 127000"
-                                    formControlName="kilometrazhi" />
+                                    formControlName="odometer" />
                             </div>
 
 
