--- a/FrontEnd/src/app/shared/components/new-klient/new-klient.component.html
+++ b/FrontEnd/src/app/shared/components/new-klient/new-klient.component.html
@@ -56,7 +56,7 @@
                             </table> -->
                     <p *ngFor="let klientetFiltruar of klientetFinancaFiltruar">
                         <button class="btn btn-xs btn-secondary btn-block"
-                            (click)="zgjidhKlientNgaFinanca(klientetFiltruar)">{{klientetFiltruar?.pershkrimi}}</button>
+                            (click)="zgjidhKlientNgaFinanca(klientetFiltruar)">{{klientetFiltruar?.shenime}}</button>
                     </p>
                 </div>
                 <div *ngIf="klientIzgjedhurNgaFinanca">
