--- a/FrontEnd/src/app/routes/home/home/home.component.html
+++ b/FrontEnd/src/app/routes/home/home/home.component.html
@@ -73,7 +73,7 @@
                     <em class="fas fa-user-md fa-3x"></em>
                 </div>
                 <div class="col-8 py-1 rounded-right">
-                    <div class="h2 mt-0">{{urdheraDiagnoze?.length || 0}}</div>
+                    <div class="h2 mt-0">{{urdheraDiagnozeAktive}}</div>
                     <div class="text-uppercase"><small>Diagnoza Aktive</small></div>
                 </div>
             </div>
@@ -98,12 +98,19 @@
                     </tr>
                 </thead> -->
                 <tbody>
-                    <tr *ngFor="let urdherDiag of urdheraDiagnoze" (click)="editUrdherDiag(urdherDiag)">
-                        <!-- <td>{{urdherDiag?.klient?.emer}}</td> -->
+                    <tr *ngFor="let urdherDiag of urdheraDiagnoze" (click)="editUrdherDiag(urdherDiag)"
+                        [ngClass]="{'table-info': urdherDiag?.edited, 'table-success': urdherDiag?.new}">
+                        <td>
+                            <div class="easypie-chart " easypiechart [options]="pieOptions1" [percent]="urdherDiag?.perqindjePerfunduar"
+                                title="{{urdherDiag?.perqindjePerfunduar || 0}}%">
+                                <!-- <small>{{easyPiePercent1}}%</small> -->
+                            </div>
+                        </td>
                         <td>{{urdherDiag?.mjeti?.brand}}</td>
                         <td>{{urdherDiag?.mjeti?.targa}}</td>
-                        <td>{{urdherDiag?.perdorues?.username}}</td>
-                        <td>{{urdherDiag?.pershkrim}}</td>
+                        <td [ngStyle]="{'text-decoration': urdherDiag?.statusi === 5 ? 'line-through' : ''}">
+                            {{urdherDiag?.perdorues?.username}}</td>
+                        <!-- <td>{{urdherDiag?.shenime}}</td> -->
                         <td>
                             <i class="fas fa-volume-off text-muted" *ngIf="urdherDiag?.prioriteti == 1"
                                 title="Prioritet i ulët"></i>
@@ -125,9 +132,11 @@
                                 title="Në punë e sipër"></em>
                             <em class="fas fa-check-circle text-success" *ngIf="urdherDiag?.statusi === 4"
                                 title="Përfunduar"></em>
+                            <em class="far fa-window-close text-danger" *ngIf="urdherDiag?.statusi === 5"
+                                title="Refuzuar"></em>
 
                         </td>
-                        <td [title]="urdherDiag?.krijuar | date :'dd MMM yyyy hh:mm:ss'">
+                        <td [title]="urdherDiag?.krijuar | date :'dd MMM yyyy hh:mm:ss'" class="text-muted">
                             <small>{{urdherDiag?.krijuar | dateAgo}}</small></td>
                     </tr>
                 </tbody>
