--- a/FrontEnd/src/app/shared/components/new-urdher-diag/new-urdher-diag.component.scss
+++ b/FrontEnd/src/app/shared/components/new-urdher-diag/new-urdher-diag.component.scss
@@ -1,5 +1,5 @@
 .draggable-box {
-    // width: 200px;
+    width: 400px;
     // height: 200px;
     border: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
